ignore obj files

--- a/.gitignore
+++ b/.gitignore
@@ -18,3 +18,5 @@
 /surveyBastet for Test/obj/surveyBastet for Test.csproj.nuget.g.targets
 /.vs/ProjectEvaluation
 /.vs/surveyBastet for Test
+/.vs
+/surveyBastet for Test/obj/Release/net9.0
