remove obg and debug

--- a/.gitignore
+++ b/.gitignore
@@ -18,3 +18,5 @@
 /surveyBastet for Test/obj/surveyBastet for Test.csproj.nuget.g.targets
 /.vs/ProjectEvaluation
 /.vs/surveyBastet for Test
+/surveyBastet for Test/bin/Debug/net9.0
+/surveyBastet for Test/obj/Debug/net9.0
