--- a/SurveyBasket/appsettings.json
+++ b/SurveyBasket/appsettings.json
@@ -1,9 +1,19 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "server=(localdb)\\MSSQLLocalDB;Database=SurveyBasket; Trusted_Connection=true "
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Jwt": {
+    "Key": "",
+    "Issuer": "SurveyBasketApp",
+    "Audience": "SurveyBasketApp users",
+    "ExpiryMinutes": 30
+
+  }
 }
