Ignoure And Add question and Answer

--- a/SurveyBasket/appsettings.json
+++ b/SurveyBasket/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "server=(localdb)\\MSSQLLocalDB;Database=SurveyBasket; Trusted_Connection=true "
+    "DefaultConnection": "Server=(localdb)\\MSSQLLocalDB;Database=SurveyBasket;Trusted_Connection=True;Encrypt=False"
   },
   "Logging": {
     "LogLevel": {
@@ -14,6 +14,8 @@
     "Issuer": "SurveyBasketApp",
     "Audience": "SurveyBasketApp users",
     "ExpiryMinutes": 30
-
-  }
+  },
+  "AllowedOrigins": [
+    "https://www.survey-basket.com"
+  ]
 }
